Increase z-index of cta banner to avoid page content showing over it.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -362,7 +362,7 @@ input[name='q']::placeholder {
     width: 100vw;
     -webkit-box-shadow: 0px 0px 18px 2px rgb(0 0 0 / .1);
     box-shadow: 0px 0px 18px 2px rgb(0 0 0 / .1);
-    z-index: 2;
+    z-index: 9999;
 }
 
 #ctaBanner i {
